# biostat2026

./: readme.md
day02c - python - introdução/: py02 - 02 - listas.ipynb
day02e - python local com uv/: day02e_01_instalando_python_uv.odp  pyproject.toml
day03a - estatistica - variáveis randômicas/: py03a - 03 - simulacao - introducao.ipynb  py03a - 04 - frequencia, distribuicao discreta.ipynb  py03a - 05 - geradores de números randômicos.ipynb
day03b - estatistica - frequência, simetria, quartis, max-min, outliers e boxplots/: py03b - 01 - frequencia.ipynb  py03b - 02 - media, mediana, moda.ipynb  py03b - 03 - parametros, simetria, quartis, max-min, outliers e boxplot.ipynb  py03b_01_frequencia.ipynb  py03b_02_media,_mediana,_moda.ipynb  py03b_03_parametros,_simetria,_quartis,_max_min,_outliers_e_boxplot.ipynb
day04a - estatistica - distribuições discretas/: py04a - 01 - Bernoulli e Binomial.ipynb  py04a - 02 - revisão inicial estatística parametrica.ipynb  py04a - 03 - outras distribuições discretas.ipynb
day04b - estatistica - distribuições contínuas/: py04b - 01 - parametros_revendo.ipynb  py04b - 02 - distribuição Normal.ipynb  py04b - 03 - distribuição Normal e Z.ipynb  py04b - 04 - distribuição Normal e t.ipynb
day05a - teste de hipótese/: py05a - 01 - teste de hipótese.ipynb
day05b - pandas/: day05b - 00 - pandas_introducao.ipynb  day05b - 01 - pandas_introducao.ipynb  day05b - 02 - pandas principais metodos.ipynb  day05b - 03 - pandas lendo arquivo não formatado excel.ipynb  py05b - 00 - pandas_introducao.ipynb  (+1 more)
src/: stat_lib.py
(+28 files in other folders)
